--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
+  padding-top: 5em;
   text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
